# exp-jq

./: .gitignore  SPEC.md  pyproject.toml
automationv3/: __init__.py  fscache_store.py
automationv3/docs/: api.rst  app_summary.rst  architecture.rst  building_blocks.rst  conf.py  execution_reporting.rst  index.rst  sql_schemas.rst
automationv3/docs/api/: executor.rst  framework_block.rst  framework_executor.rst  framework_rst.rst  fscache.rst  ids.rst  jobqueue.rst  plugins_core_outcome.rst  plugins_core_wait.rst  reporting_repository.rst  reporting_service.rst  reporting_uut.rst  suites.rst  uut.rst  views.rst  worker_cli.rst  worker_system.rst
automationv3/framework/: __init__.py  block.py  edn.py  executor.py  lisp.py  observer.py  requirements.py  rst.py  testcase.py
automationv3/framework/data/: space_controller_requirements.csv
automationv3/frontend/: __init__.py
automationv3/frontend/helpers/: __init__.py  context.py  queue.py  reports.py  scripts.py  system.py
automationv3/frontend/routes/: __init__.py  queue.py  reports.py  scripts.py  state.py  system.py
automationv3/frontend/templates/: base.html  completed_jobs.html  index.html  job_output.html  queue.html  report_detail.html  report_export.html  reports.html  script_detail.html  scripts.html  workers.html
automationv3/jobqueue/: __init__.py  executor.py  fscache.py  ids.py  local_tui.py  suites.py  uut.py  views.py  worker_system.py
automationv3/plugins/: __init__.py
automationv3/plugins/core/: __init__.py  wait.py
automationv3/reporting/: __init__.py  repository.py  service.py  uut.py
docs/: api.rst  architecture.rst  conf.py  index.rst
docs/_static/: mermaid.esm.min.mjs
docs/api/: executor.rst  fscache.rst  ids.rst  jobqueue.rst  suites.rst  uut.rst  views.rst  worker_cli.rst  worker_system.rst
frontend/: __init__.py
frontend/templates/: base.html  index.html  scripts.html
frontend/templates/partials/: jobs_table.html  next_job_card.html  results_table.html  scripts_panel.html  (+1 more)
jobqueue/: __init__.py  executor.py  fscache.py  suites.py  uut.py  views.py  worker_cli.py  worker_system.py
tests/: test_edn_reader.py  test_execution_output.py  test_job_output_views.py  test_lisp.py  test_local_tui.py  test_queue_reports.py  test_requirements.py  test_result_reliability.py  test_rst_rendering.py  test_rst_splitting.py  test_rvt_directive.py  test_script_editor.py
(+19 files in other folders)
