[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobqueue-app"
version = "0.1.0"
description = "SQLite-backed job queue with Flask + HTMX dashboard"
authors = [{ name = "Your Name" }]
readme = "SPEC.md"
requires-python = ">=3.9"
dependencies = [
    "Flask>=2.3,<3",
    "docopt>=0.6.2",
    "requests>=2.31.0",
    "Sphinx>=7.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinxcontrib-mermaid>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["automationv3", "automationv3.*"]

[tool.setuptools.package-data]
"automationv3.frontend" = ["templates/**/*.html"]

[tool.flask]
app = "automationv3.frontend:create_app"

[project.scripts]
jobqueue-worker = "automationv3.jobqueue.worker_cli:main"
