[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobqueue-app"
version = "0.1.0"
description = "SQLite-backed job queue with Flask + HTMX dashboard"
authors = [{ name = "Your Name" }]
readme = "SPEC.md"
requires-python = ">=3.9"
dependencies = [
    "Flask>=2.3,<3",
    "docopt>=0.6.2",
    "prompt_toolkit>=3.0.36",
    "requests>=2.31.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "Sphinx>=7.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinxcontrib-mermaid>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["automationv3", "automationv3.*"]

[tool.setuptools.package-data]
"automationv3.frontend" = ["templates/**/*.html"]
"automationv3.framework" = ["data/*.csv"]

[tool.flask]
app = "automationv3.frontend:create_app"

[project.scripts]
automationv3 = "automationv3.jobqueue.local_tui:main"
jobqueue-worker = "automationv3.jobqueue.worker_cli:main"
automationv3-local = "automationv3.jobqueue.local_tui:main"
